--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,16 +3,16 @@
     <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://ddiu.io" target="_blank"
+      href="https://levinhkhang.store" target="_blank"
     >
-      Diu
+      LeVinhKhang
     </a>
     <span px-1>|</span>
     <a
       b-slate-link
-      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
+      href="https://me.momo.vn/levinhkhang" target="_blank"
     >
-      Source Code
+      Donate me 
     </a>
   </p>
 </footer>
